update for summer ver

--- a/contact/index.html
+++ b/contact/index.html
@@ -227,11 +227,11 @@
         </div>
     </section>
 
-    <section id="campain">
+    <section id="campain" class="bk-pink">
         <h2 class="main_cap en_title"><small>CAMPAIN</small><br />キャンペーン</h2>
         <div class="container">
-            <div class="row">
-                <div class="col-12 col-md-8 offset-md-2 d-flex">
+            <!--<div class="row">
+                 <div class="col-12 col-md-8 offset-md-2 d-flex">
                     <img class="" src="../res/campain1.svg" alt="今だけ！限定！応援キャンペーン" />
                     <div class="inner">
                         <h3><span class="tag">入店お祝い金</span>
@@ -242,14 +242,47 @@
                         </h3>
                     </div>
                 </div>
-            </div>
-            <div class="row">
+            </div> -->
+            <!-- <div class="row">
                 <p class="col-12 col-md-10 offset-md-1">
                     初めてチャットレディとして働く方を応援するため、セリーヌでは入店お祝い金として<strong>最大5万円を入店が決まった方全員にプレゼント！</strong><br />初月にどれだけ稼げるか心配な方に、少しでも安心してスタートして欲しい。セリーヌは福岡でいちばん働きやすいチャットプロダクションを目指しています！
                 </p>
                 <div class="col-12 col-md-10 offset-md-1">
                     <h3 class="cheerup"><strong><span>さらに初心者応援！</span></strong></h3>
                     <p>最低時給1,200円を保証!!お仕事が全然分からないから不安という方も、時給保証があるので稼ぎながら安心してお仕事を覚えて下さい♪</p>
+                </div>
+            </div> -->
+            <div class="row">
+                <!-- <div class="col-12 col-md-8 offset-md-2 d-flex">
+                    <img class="" src="./res/campain1.svg" alt="今だけ！限定！応援キャンペーン" />
+                    <div class="inner">
+                        <h3><span class="tag">入店お祝い金</span>
+                            <div class="d-flex justify-content-center">
+                                <span class="accent">最大</span>
+                                <p><span class="bdd">5万円</span><span class='semaku'>もらえる！</span></p>
+                            </div>
+                        </h3>
+                    </div>
+                </div> -->
+                <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+                    <h3 style="width: 100%;">
+                        <img style="width: 100%;" src="../res/2021summer-banner.gif" alt="夏だけ！サマージャンボ入店祝い！最大10万円支給！">
+                    </h3>
+                </div>
+                <div class="col-12 col-md-4">
+                    <h3 class="spacer_top" style="width: 100%;">
+                        <img style="width: 100%;" src="../res/campain1.gif" alt="最低時給1200円保障！">
+                    </h3>
+                </div>
+                <div class="col-12 col-md-4">
+                    <h3 class="spacer_top" style="width: 100%;">
+                        <img style="width: 100%;" src="../res/campain2.gif" alt="体験入店で最大1万円支給！">
+                    </h3>
+                </div>
+                <div class="col-12 col-md-4">
+                    <h3 class="spacer_top" style="width: 100%;">
+                        <img style="width: 100%;" src="../res/campain3.gif" alt="面接時の交通費最大2000円支給！">
+                    </h3>
                 </div>
             </div>
         </div>
