--- a/index.html
+++ b/index.html
@@ -82,17 +82,19 @@
                 <h1 class=""><img src="./res/logo.svg" alt="celine. logo" /></h1>
             </div>
         </div>
-        <div class="wrap2">
+        <!-- <div class="wrap2">
             <p><span>5</span>万円</p>
             <small>入店祝金</small>
-        </div>
+        </div> -->
         <div class="wrap3">
             <small class="sub">WILL HAVE MANY BENEFITS</small>
-            <h2><small>平均時給</small><br />3200<small>円</small>〜</h2>
+            <!-- <h2><small>平均時給</small><br />3200<small>円</small>〜</h2> -->
+            <h2><br />時給1万円も可能</h2>
             <ul class="">
                 <li>最低時給保障</li>
                 <li>お仕事ノルマなし</li>
                 <li>身バレなし</li>
+                <li><span><small>福岡市エリア</small><br />無料送迎</span></li>
             </ul>
         </div>
         <div class="wrap4">
@@ -128,7 +130,7 @@
         <h2><span class="full_bd">celine.だけの特典！</span></h2>
         <div class="container">
             <div class="row">
-                <div class="col-12 col-md-6 d-flex">
+                <!-- <div class="col-12 col-md-6 d-flex">
                     <h3><img class="" src="./res/campain1.svg" alt="今だけ！限定！応援キャンペーン" /></h3>
                     <div class="inner">
                         <h4>入店お祝い金</h4>
@@ -137,8 +139,13 @@
                             <p><span class="bdd">5万円</span><span class='semaku'>もらえる！</span></p>
                         </div>
                     </div>
+                </div> -->
+                <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+                    <h3 style="width: 100%;">
+                        <img style="width: 100%;" src="./res/2021summer-banner.gif" alt="夏だけ！サマージャンボ入店祝い！最大10万円支給！">
+                    </h3>
                 </div>
-                <div class="col-12 col-md-6 d-flex">
+                <!-- <div class="col-12 col-md-6 d-flex">
                     <h3><img src="./res/campain2.svg" alt="セリーヌだけ！初心者でも安心" /></h3>
                     <div class="inner">
                         <h4>最低時給保障</h4>
@@ -147,11 +154,14 @@
                             <p><span class="bdd">1,200円</span><span>保障！</span></p>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
-        <div class="center">
-            <div id="apply_btn" class="btn">今すぐ応募</div>
+        <!-- <div class="center spacer_top">
+            <div id="apply_btn" class="btn">もっとキャンペーンを見る</div>
+        </div> -->
+        <div class="center spacer_top">
+            <a href='#campain' class="btn">お得なキャンペーンはこちら</a>
         </div>
     </section>
 
@@ -402,6 +412,13 @@
                     <p class="msg" data='bene4'>容姿だけが全てではありませんが、新規指名、リピートには見た目も影響しています。<br />そこで弊社では<strong>プロのスタイリストがお仕事前に完璧にメイクを行う</strong>ので、いつも以上に綺麗で可愛い姿でお客様とお話しすることができます。</p>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 spacer_top">
+                        <a href="https://ameblo.jp/celine-fuk/entrylist.html" target="_blank">
+                            <img style="width: 100%;" src="./res/blog-banner.jpg" alt="セリーヌスタッフブログ" />
+                        </a>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -523,11 +540,11 @@
         </div>
     </section>
 
-    <section id="campain">
+    <section id="campain" class="bk-pink">
         <h2 class="main_cap en_title"><small>CAMPAIN</small><br />キャンペーン</h2>
         <div class="container">
             <div class="row">
-                <div class="col-12 col-md-8 offset-md-2 d-flex">
+                <!-- <div class="col-12 col-md-8 offset-md-2 d-flex">
                     <img class="" src="./res/campain1.svg" alt="今だけ！限定！応援キャンペーン" />
                     <div class="inner">
                         <h3><span class="tag">入店お祝い金</span>
@@ -537,9 +554,30 @@
                             </div>
                         </h3>
                     </div>
+                </div> -->
+                <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+                    <h3 style="width: 100%;">
+                        <img style="width: 100%;" src="./res/2021summer-banner.gif" alt="夏だけ！サマージャンボ入店祝い！最大10万円支給！">
+                    </h3>
+                </div>
+                <div class="col-12 col-md-4">
+                    <h3 class="spacer_top" style="width: 100%;">
+                        <img style="width: 100%;" src="./res/campain1.gif" alt="最低時給1200円保障！">
+                    </h3>
+                </div>
+                <div class="col-12 col-md-4">
+                    <h3 class="spacer_top" style="width: 100%;">
+                        <img style="width: 100%;" src="./res/campain2.gif" alt="体験入店で最大1万円支給！">
+                    </h3>
+                </div>
+                <div class="col-12 col-md-4">
+                    <h3 class="spacer_top" style="width: 100%;">
+                        <img style="width: 100%;" src="./res/campain3.gif" alt="面接時の交通費最大2000円支給！">
+                    </h3>
                 </div>
             </div>
-            <div class="row">
+            
+            <!-- <div class="row">
                 <p class="col-12 col-md-10 offset-md-1">
                     初めてチャットレディとして働く方を応援するため、セリーヌでは入店お祝い金として<strong>最大5万円を入店が決まった方全員にプレゼント！</strong><br />初月にどれだけ稼げるか心配な方に、少しでも安心してスタートして欲しい。セリーヌは福岡でいちばん働きやすいチャットプロダクションを目指しています！
                 </p>
@@ -547,7 +585,7 @@
                     <h3 class="cheerup"><strong><span>さらに初心者応援！</span></strong></h3>
                     <p>最低時給1,200円を保証!!お仕事が全然分からないから不安という方も、時給保証があるので稼ぎながら安心してお仕事を覚えて下さい♪</p>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
