--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-10 offset-md-1 col-lg-6 offset-lg-0">
-                    <p class="msg" data='bene4'>容姿だけが全てではありませんが、新規指名、リピートには見た目も影響しています。<br />そこで弊社では<strong>プロのスタイリストがお仕事前に完璧にメイクを行う</strong>ので、いつも以上に綺麗で可愛い姿でお客様とお話しすることができます。</p>
+                    <p class="msg" data='bene4'>容姿が全てではありませんが、新規指名、リピートには見た目も影響しています。そこで弊社では<strong>プロのスタイリストを招きヘアメイクの講習</strong>を行うことができるので、技術UPはもちろん！綺麗になれますし、同時に稼ぐこともできる！という環境をご提供しております。</p>
                 </div>
             </div>
             <div class="row">
