--- a/index.html
+++ b/index.html
@@ -98,8 +98,10 @@
             </ul>
         </div>
         <div class="wrap4">
-            <p><span>今のうちに</span><br/><span>稼ぐ。</span></p>
-            <small>コロナ落ち着いたら<br />まずは海外旅行でしょ！</small>
+            <!-- <p><span>今のうちに</span><br/><span>稼ぐ。</span></p>
+                <small>コロナ落ち着いたら<br />まずは海外旅行でしょ！</small>
+             -->
+            <p><span>今だけ！<br />入店祝い最大10万円</span></p>
         </div>
         <div class="wrap5">
             <p>やりたい事いっぱいあるから始めた。</p>
@@ -108,6 +110,7 @@
             <small class='sub'>ANY OTHER BENEFITS</small>
             <ul class="d-flex flex-row flex-wrap">
                 <li>フリードリンク&nbsp;/</li>
+                <li>&nbsp;軽食・お菓子&nbsp;/</li>
                 <li>&nbsp;日払い対応&nbsp;/</li>
                 <li>&nbsp;ノルマなし&nbsp;/</li>
                 <li>&nbsp;顔出しなしOK!&nbsp;/</li>
@@ -127,7 +130,7 @@
     </section>
 
     <section id="tokuten">
-        <h2><span class="full_bd">celine.だけの特典！</span></h2>
+        <h2><span class="full_bd">celine.だけの素敵な特典！</span></h2>
         <div class="container">
             <div class="row">
                 <!-- <div class="col-12 col-md-6 d-flex">
@@ -209,7 +212,7 @@
                     </div>
                 </div>
             </div>
-            <div class="center">
+            <div class="center spacer_top">
                 <div id="contact_btn" class="btn">お問い合わせはこちら</div>
             </div>
         </div>
@@ -443,7 +446,7 @@
                                 <img src="./res/icon-drink.svg" alt="freedrink" />
                                 <span class="bold">フリードリンク</span>
                             </h3>
-                            <p class="col-8">美味しいコーヒーをはじめ、ジュースやお水が充実。お菓子も用意しています。</p>
+                            <p class="col-8">美味しいコーヒーをはじめ、ジュースやお水が充実。軽食やお菓子も用意しています。</p>
                         </div>
                     </div>    
                 </div>
@@ -686,6 +689,7 @@
             <div class="row mt-16">
                 <div class="col-12">
                     <div class="center">
+                        <p class="spacer_top">年中無休、24時間いつでもOK!</p>
                         <div id="apply_btn" class="btn">今すぐ応募</div>
                     </div>
                 </div>
