--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
     <section id="top-image" class="">
         <div class="relative d-flex flex-column">
         <div class="img-wrap">
-            <img src="res/celine-top1.jpg" alt="celine live chat" />
+            <!-- <div class="relative img"> -->
+                <img src="res/celine-top1.jpg" alt="celine live chat" />
+            <!-- </div> -->
         </div>
         <div class="wrap1">
             <div class="relative">
@@ -89,7 +91,7 @@
         <div class="wrap3">
             <small class="sub">WILL HAVE MANY BENEFITS</small>
             <!-- <h2><small>平均時給</small><br />3200<small>円</small>〜</h2> -->
-            <h2><br />時給1万円も可能</h2>
+            <h2>時給1万円も可能</h2>
             <ul class="">
                 <li>最低時給保障</li>
                 <li>お仕事ノルマなし</li>
@@ -98,9 +100,9 @@
             </ul>
         </div>
         <div class="wrap4">
-            <!-- <p><span>今のうちに</span><br/><span>稼ぐ。</span></p>
-                <small>コロナ落ち着いたら<br />まずは海外旅行でしょ！</small>
-             -->
+             <!-- <p><span>今のうちに</span><br/><span>稼ぐ。</span></p>
+                <small>コロナ落ち着いたら<br />まずは海外旅行でしょ！</small> -->
+             
             <p><span>今だけ！<br />入店祝い最大10万円</span></p>
         </div>
         <div class="wrap5">
