--- a/index.html
+++ b/index.html
@@ -135,31 +135,18 @@
         <h2><span class="full_bd">celine.だけの素敵な特典！</span></h2>
         <div class="container">
             <div class="row">
-                <!-- <div class="col-12 col-md-6 d-flex">
-                    <h3><img class="" src="./res/campain1.svg" alt="今だけ！限定！応援キャンペーン" /></h3>
-                    <div class="inner">
-                        <h4>入店お祝い金</h4>
-                        <div class="d-flex justify-content-center">
-                            <span class="accent">最大</span>
-                            <p><span class="bdd">5万円</span><span class='semaku'>もらえる！</span></p>
-                        </div>
-                    </div>
-                </div> -->
                 <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
                     <h3 style="width: 100%;">
                         <img style="width: 100%;" src="./res/2021summer-banner.gif" alt="夏だけ！サマージャンボ入店祝い！最大10万円支給！">
                     </h3>
                 </div>
-                <!-- <div class="col-12 col-md-6 d-flex">
-                    <h3><img src="./res/campain2.svg" alt="セリーヌだけ！初心者でも安心" /></h3>
-                    <div class="inner">
-                        <h4>最低時給保障</h4>
-                        <div class="d-flex justify-content-center">
-                            <span class="accent">時給</span>
-                            <p><span class="bdd">1,200円</span><span>保障！</span></p>
-                        </div>
-                    </div>
-                </div> -->
+            </div>
+            <div class="row">
+                <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 spacer_top">
+                        <a href="https://ameblo.jp/celine-fuk/entrylist.html" target="_blank">
+                            <img style="width: 100%;" src="./res/blog-banner.gif" alt="セリーヌスタッフブログ" />
+                        </a>
+                </div>
             </div>
         </div>
         <!-- <div class="center spacer_top">
@@ -415,13 +402,6 @@
                 </div>
                 <div class="col-12 col-md-10 offset-md-1 col-lg-6 offset-lg-0">
                     <p class="msg" data='bene4'>容姿が全てではありませんが、新規指名、リピートには見た目も影響しています。そこで弊社では<strong>プロのスタイリストを招きヘアメイクの講習</strong>を行うことができるので、技術UPはもちろん！綺麗になれますし、同時に稼ぐこともできる！という環境をご提供しております。</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 spacer_top">
-                        <a href="https://ameblo.jp/celine-fuk/entrylist.html" target="_blank">
-                            <img style="width: 100%;" src="./res/blog-banner.jpg" alt="セリーヌスタッフブログ" />
-                        </a>
                 </div>
             </div>
         </div>
