--- a/contact/index.html
+++ b/contact/index.html
@@ -397,7 +397,7 @@
 
     <footer class="bk-pink_v">
         <h2>
-            福岡チャトレディで働くなら<br />
+            福岡チャットレディで働くなら<br />
                 <span class="logo">celine.</span>
         </h2>
         <div>
