--- a/index.html
+++ b/index.html
@@ -255,11 +255,17 @@
                         <p class="chatdesc">チャットレディのお仕事は、<strong>シフトや出勤ノルマ等一切ありません。</strong>プライベート最優先で空いた時間にお仕事できます。月に稼ぎたい分だけお仕事すればいいので、お仕事もプライベートも賢く充実させましょう！</p>
                     </div>
                     <div class="roomcap">
-                        <p class="d-flex justify-content-center align-items-center">お部屋をアップデート中！</p>
+                        <p class="d-flex justify-content-center align-items-center">
+                            完全個室の広々としたチャットルーム<br />
+                            気分に合わせてお部屋を選べます！定期的に模様替えして、気持をリフレッシュ^_^<br />
+                            なので少しでもやる気になれる事があれば、徹底的にサポートしています。
+                        </p>
                     </div>
-                    <div class="office-imgs d-flex flex-column flex-md-row">
+                    <div class="office-imgs d-flex flex-column flex-md-row flex-wrap">
                         <img src="./res/room1.jpg" alt="room picture1"/>
                         <img src="./res/room2.jpg" alt="room picture2" />
+                        <img src="./res/room3.jpg" alt="room picture3"/>
+                        <img src="./res/room4.jpg" alt="room picture4" />
                     </div>
                     
                 </div>
@@ -417,6 +423,21 @@
 
             <div class="row office-imgs">
                 <div><img src="./res/office.jpg" /></div>
+            </div>
+
+            <div class="row office-cap">
+                <div class="col-12 col-md-6 spacer_top">
+                    <h3 class="center">待機・休憩室でゆっくり</h3>
+                    <p class="">
+                        チャットをしていない時間も、くつろげる空間をご準備しています！ドリンクなんかも無料でご準備してるので、休憩室でゆっくり過ごす時間も作ってください^_^
+                    </p>
+                </div>
+                <div class="col-12 col-md-6 spacer_top">
+                    <h3 class="center">化粧ブースも完備</h3>
+                    <p class="">
+                        お仕事前や化粧直しの際はお化粧台がございます！お化粧道具やアイロン等の機材もございますので、ご自由にお使いいただいて構いません^_^
+                    </p>
+                </div>
             </div>
 
             <div class="row custome_dott_wrap">
