--- a/index.html
+++ b/index.html
@@ -137,7 +137,9 @@
             <div class="row">
                 <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
                     <h3 style="width: 100%;">
-                        <img style="width: 100%;" src="./res/2021summer-banner.gif" alt="夏だけ！サマージャンボ入店祝い！最大10万円支給！">
+                        <a href='#campain'>
+                            <img style="width: 100%;" src="./res/2021summer-banner_2.gif" alt="夏だけ！サマージャンボ入店祝い！最大10万円支給！">
+                        </a>
                     </h3>
                 </div>
             </div>
@@ -150,11 +152,8 @@
             </div>
         </div>
         <!-- <div class="center spacer_top">
-            <div id="apply_btn" class="btn">もっとキャンペーンを見る</div>
-        </div> -->
-        <div class="center spacer_top">
             <a href='#campain' class="btn">お得なキャンペーンはこちら</a>
-        </div>
+        </div> -->
     </section>
 
     <section id="dear" class="triangle pink">
@@ -565,21 +564,25 @@
                     <h3 style="width: 100%;">
                         <img style="width: 100%;" src="./res/2021summer-banner.gif" alt="夏だけ！サマージャンボ入店祝い！最大10万円支給！">
                     </h3>
+                    <p style="padding:8px 8px 0;">魅力的なキャンペーンを延長しております！この機会に是非‼️&nbsp;詳しくは面接当日にご説明させていただきます。</p>
                 </div>
                 <div class="col-12 col-md-4">
                     <h3 class="spacer_top" style="width: 100%;">
                         <img style="width: 100%;" src="./res/campain1.gif" alt="最低時給1200円保障！">
                     </h3>
+                    <p style="padding:8px 8px 0;">待機中は報酬に繋がりません！そんな不安を解消する、初心者に安心の時給保証制度がございます。</p>
                 </div>
                 <div class="col-12 col-md-4">
                     <h3 class="spacer_top" style="width: 100%;">
                         <img style="width: 100%;" src="./res/campain2.gif" alt="体験入店で最大1万円支給！">
                     </h3>
+                    <p style="padding:8px 8px 0;">体験入店だけでも是非！やってみるだけで貰えちゃう体験入店報酬。</p>
                 </div>
                 <div class="col-12 col-md-4">
                     <h3 class="spacer_top" style="width: 100%;">
                         <img style="width: 100%;" src="./res/campain3.gif" alt="面接時の交通費最大2000円支給！">
                     </h3>
+                    <p style="padding:8px 8px 0;">面接にお越しいただきましたら、交通費はこちらで負担致します！※領収書と引き換えになります。</p>
                 </div>
             </div>
             
