--- a/contact/index.html
+++ b/contact/index.html
@@ -269,7 +269,7 @@
                 </div> -->
                 <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
                     <h3 style="width: 100%;">
-                        <img style="width: 100%;" src="../res/2021summer-banner.gif" alt="夏だけ！サマージャンボ入店祝い！最大10万円支給！">
+                        <img style="width: 100%;" src="../res/202110-banner.gif" alt="最大10万円支給！">
                     </h3>
                 </div>
                 <div class="col-12 col-md-4">
