--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
                     <h3 style="width: 100%;">
                         <a href='#campain'>
-                            <img style="width: 100%;" src="./res/2021summer-banner_2.gif" alt="夏だけ！サマージャンボ入店祝い！最大10万円支給！">
+                            <img style="width: 100%;" src="./res/202110-banner.gif" alt="最大10万円支給！">
                         </a>
                     </h3>
                 </div>
@@ -562,7 +562,7 @@
                 </div> -->
                 <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
                     <h3 style="width: 100%;">
-                        <img style="width: 100%;" src="./res/2021summer-banner.gif" alt="夏だけ！サマージャンボ入店祝い！最大10万円支給！">
+                        <img style="width: 100%;" src="./res/202110-banner.gif" alt="最大10万円支給！">
                     </h3>
                     <p style="padding:8px 8px 0;">魅力的なキャンペーンを延長しております！この機会に是非‼️&nbsp;詳しくは面接当日にご説明させていただきます。</p>
                 </div>
