--- a/index.html
+++ b/index.html
@@ -562,9 +562,9 @@
                 </div> -->
                 <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
                     <h3 style="width: 100%;">
-                        <img style="width: 100%;" src="./res/202110-banner.gif" alt="最大10万円支給！">
+                        <img style="width: 100%;" src="./res/202110-banner2.gif" alt="最大10万円支給！">
                     </h3>
-                    <p style="padding:8px 8px 0;">魅力的なキャンペーンを延長しております！この機会に是非‼️&nbsp;詳しくは面接当日にご説明させていただきます。</p>
+                    <p style="padding:8px 8px 0;">魅力的なキャンペーンが無期限継続決定！この機会に是非‼&nbsp;詳しくは面接当日にご説明させていただきます。</p>
                 </div>
                 <div class="col-12 col-md-4">
                     <h3 class="spacer_top" style="width: 100%;">
