--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="format-detection" content="telephone=no">
         <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
-        <meta name="description" content="福岡でチャットレディを始めるなら安心で手厚い保障のceline.（セリーヌ）にお任せ！！最低時給1200円を保障！今だけ入店祝い金5万円を支給！はceline.だけ。専属のスタイリストがヘアメイクをサポート！化粧品や衣装も充実しているので、あなたもライブチャットの全国ランキング上位にランクインできる!?天神から徒歩圏内で通勤に便利な環境です！チャットレディ未経験でも手厚くサポート！初月から効率的に稼げます。">
+        <meta name="description" content="福岡でチャットレディを始めるなら安心で手厚い保障のceline.（セリーヌ）にお任せ！！最低時給1200円を保障！今だけ入店祝い金10万円を支給！はceline.だけ。専属のスタイリストがヘアメイクをサポート！化粧品や衣装も充実しているので、あなたもライブチャットの全国ランキング上位にランクインできる!?天神から徒歩圏内で通勤に便利な環境です！チャットレディ未経験でも手厚くサポート！初月から効率的に稼げます。">
         <meta charset="utf-8">
 
         <!-- Open Graph Tags -->
@@ -24,11 +24,11 @@
         <meta property="og:url" content="https://chat-fukuoka.com/">
         <meta property="og:image" content="https://chat-fukuoka.com/res/og-img.jpg">
         <meta property="og:site_name" content="celine. (セリーヌ) | 福岡で今一番人気のプロダクション">
-        <meta property="og:description" content="福岡でチャットレディを始めるなら安心で手厚い保障のceline.（セリーヌ）にお任せ！！最低時給1200円を保障！今だけ入店祝い金5万円を支給！はceline.だけ。専属のスタイリストがヘアメイクをサポート！化粧品や衣装も充実しているので、あなたもライブチャットの全国ランキング上位にランクインできる!?天神から徒歩圏内で通勤に便利な環境です！チャットレディ未経験でも手厚くサポート！初月から効率的に稼げます。">
+        <meta property="og:description" content="福岡でチャットレディを始めるなら安心で手厚い保障のceline.（セリーヌ）にお任せ！！最低時給1200円を保障！今だけ入店祝い金10万円を支給！はceline.だけ。専属のスタイリストがヘアメイクをサポート！化粧品や衣装も充実しているので、あなたもライブチャットの全国ランキング上位にランクインできる!?天神から徒歩圏内で通勤に便利な環境です！チャットレディ未経験でも手厚くサポート！初月から効率的に稼げます。">
         <meta property="og:locale" content="ja_JP">
         <meta name="twitter:text:title" content="福岡のチャットレディなら、celine.(セリーヌ) | 賢くオシャレに働く時代です!!">
         <meta name="twitter:card" content="summary">
-        <meta name="twitter:description" content="福岡でチャットレディを始めるなら安心で手厚い保障のceline.（セリーヌ）にお任せ！！最低時給1200円を保障！今だけ入店祝い金5万円を支給！はceline.だけ。専属のスタイリストがヘアメイクをサポート！化粧品や衣装も充実しているので、あなたもライブチャットの全国ランキング上位にランクインできる!?天神から徒歩圏内で通勤に便利な環境です！チャットレディ未経験でも手厚くサポート！初月から効率的に稼げます。">
+        <meta name="twitter:description" content="福岡でチャットレディを始めるなら安心で手厚い保障のceline.（セリーヌ）にお任せ！！最低時給1200円を保障！今だけ入店祝い金10万円を支給！はceline.だけ。専属のスタイリストがヘアメイクをサポート！化粧品や衣装も充実しているので、あなたもライブチャットの全国ランキング上位にランクインできる!?天神から徒歩圏内で通勤に便利な環境です！チャットレディ未経験でも手厚くサポート！初月から効率的に稼げます。">
 
         <!-- favicon setting -->
         <link rel="shortcut icon" href="https://chat-fukuoka.com/res/favicon.ico">
@@ -100,10 +100,7 @@
             </ul>
         </div>
         <div class="wrap4">
-             <!-- <p><span>今のうちに</span><br/><span>稼ぐ。</span></p>
-                <small>コロナ落ち着いたら<br />まずは海外旅行でしょ！</small> -->
-             
-            <p><span>今だけ！<br />入店祝い最大10万円</span></p>
+            <p><span>業界1の破格待遇!!<br />入店祝い最大10万円</span></p>
         </div>
         <div class="wrap5">
             <p>やりたい事いっぱいあるから始めた。</p>
