--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
         </script>
 
         <!-- meta -->
-        <title>福岡のチャットレディなら、celine.(セリーヌ) | 賢くオシャレに働く時代です!!</title>
+        <title>鹿児島のチャットレディなら、celine.(セリーヌ) | 賢くオシャレに働く時代です!!</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="format-detection" content="telephone=no">
         <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
-        <meta name="description" content="福岡でチャットレディを始めるなら安心で手厚い保障のceline.（セリーヌ）にお任せ！！最低時給1200円を保障！今だけ入店祝い金10万円を支給！はceline.だけ。専属のスタイリストがヘアメイクをサポート！化粧品や衣装も充実しているので、あなたもライブチャットの全国ランキング上位にランクインできる!?天神から徒歩圏内で通勤に便利な環境です！チャットレディ未経験でも手厚くサポート！初月から効率的に稼げます。">
+        <meta name="description" content="鹿児島でチャットレディを始めるなら安心で手厚い保障のceline.（セリーヌ）にお任せ！！最低時給1200円を保障！今だけ入店祝い金10万円を支給！はceline.だけ。専属のスタイリストがヘアメイクをサポート！化粧品や衣装も充実しているので、あなたもライブチャットの全国ランキング上位にランクインできる!?桜島桟橋駅・水族館口駅から徒歩圏内で通勤に便利な環境です！チャットレディ未経験でも手厚くサポート！初月から効率的に稼げます。">
         <meta charset="utf-8">
 
         <!-- Open Graph Tags -->
-        <meta property="og:title" content="福岡のチャットレディなら、celine.(セリーヌ) | 賢くオシャレに働く時代です!!">
+        <meta property="og:title" content="鍵島のチャットレディなら、celine.(セリーヌ) | 賢くオシャレに働く時代です!!">
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://chat-fukuoka.com/">
         <meta property="og:image" content="https://chat-fukuoka.com/res/og-img.jpg">
-        <meta property="og:site_name" content="celine. (セリーヌ) | 福岡で今一番人気のプロダクション">
-        <meta property="og:description" content="福岡でチャットレディを始めるなら安心で手厚い保障のceline.（セリーヌ）にお任せ！！最低時給1200円を保障！今だけ入店祝い金10万円を支給！はceline.だけ。専属のスタイリストがヘアメイクをサポート！化粧品や衣装も充実しているので、あなたもライブチャットの全国ランキング上位にランクインできる!?天神から徒歩圏内で通勤に便利な環境です！チャットレディ未経験でも手厚くサポート！初月から効率的に稼げます。">
+        <meta property="og:site_name" content="celine. (セリーヌ) | 鹿児島で今一番人気のプロダクション">
+        <meta property="og:description" content="鹿児島でチャットレディを始めるなら安心で手厚い保障のceline.（セリーヌ）にお任せ！！最低時給1200円を保障！今だけ入店祝い金10万円を支給！はceline.だけ。専属のスタイリストがヘアメイクをサポート！化粧品や衣装も充実しているので、あなたもライブチャットの全国ランキング上位にランクインできる!?桜島桟橋駅・水族館口駅から徒歩圏内で通勤に便利な環境です！チャットレディ未経験でも手厚くサポート！初月から効率的に稼げます。">
         <meta property="og:locale" content="ja_JP">
-        <meta name="twitter:text:title" content="福岡のチャットレディなら、celine.(セリーヌ) | 賢くオシャレに働く時代です!!">
+        <meta name="twitter:text:title" content="鹿児島のチャットレディなら、celine.(セリーヌ) | 賢くオシャレに働く時代です!!">
         <meta name="twitter:card" content="summary">
-        <meta name="twitter:description" content="福岡でチャットレディを始めるなら安心で手厚い保障のceline.（セリーヌ）にお任せ！！最低時給1200円を保障！今だけ入店祝い金10万円を支給！はceline.だけ。専属のスタイリストがヘアメイクをサポート！化粧品や衣装も充実しているので、あなたもライブチャットの全国ランキング上位にランクインできる!?天神から徒歩圏内で通勤に便利な環境です！チャットレディ未経験でも手厚くサポート！初月から効率的に稼げます。">
+        <meta name="twitter:description" content="鹿児島でチャットレディを始めるなら安心で手厚い保障のceline.（セリーヌ）にお任せ！！最低時給1200円を保障！今だけ入店祝い金10万円を支給！はceline.だけ。専属のスタイリストがヘアメイクをサポート！化粧品や衣装も充実しているので、あなたもライブチャットの全国ランキング上位にランクインできる!?桜島桟橋駅・水族館口駅から徒歩圏内で通勤に便利な環境です！チャットレディ未経験でも手厚くサポート！初月から効率的に稼げます。">
 
         <!-- favicon setting -->
         <link rel="shortcut icon" href="https://chat-fukuoka.com/res/favicon.ico">
@@ -80,23 +80,18 @@
         </div>
         <div class="wrap1">
             <div class="relative">
-                <p class="sub">[セリーヌ]<br />福岡で一番人気のプロダクション</p>
+                <p class="sub">[セリーヌ]<br />鹿児島で一番人気のプロダクション</p>
                 <h1 class=""><img src="./res/logo.svg" alt="celine. logo" /></h1>
             </div>
         </div>
-        <!-- <div class="wrap2">
-            <p><span>5</span>万円</p>
-            <small>入店祝金</small>
-        </div> -->
         <div class="wrap3">
             <small class="sub">WILL HAVE MANY BENEFITS</small>
-            <!-- <h2><small>平均時給</small><br />3200<small>円</small>〜</h2> -->
             <h2>時給1万円も可能</h2>
             <ul class="">
                 <li>最低時給保障</li>
                 <li>お仕事ノルマなし</li>
                 <li>身バレなし</li>
-                <li><span><small>福岡市エリア</small><br />無料送迎</span></li>
+                <li><span><small>鹿児島市エリア</small><br />無料送迎</span></li>
             </ul>
         </div>
         <div class="wrap4">
@@ -119,7 +114,7 @@
                 <li>&nbsp;化粧道具&nbsp;/</li>
                 <li>&nbsp;衣装&nbsp;/</li>
                 <li>&nbsp;専属スタイリスト&nbsp;/</li>
-                <li>&nbsp;天神徒歩圏内</li>
+                <li>&nbsp;桜島桟橋通駅<br />水族館口駅<br />徒歩圏内</li>
             </ul>
         </div>
         <div class="wrap7">
@@ -158,7 +153,7 @@
             <div style="text-align: center;">
                 <span class="sml_caption">DEAR FUKUOKA'S LADIES</span>
             </div>
-            <h2><span>福岡の女性の皆様へ</span></h2>
+            <h2><span>鹿児島の女性の皆様へ</span></h2>
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
@@ -239,7 +234,7 @@
                             <h4>&ldquo;好きなスタイルで働ける&rdquo;</h4>
                             <div class="d-md-none"><span class="arrow">&gt;</span></div>
                         </div>
-                        <p class="chatdesc">アダルトチャット等の強制は一切ありません。<strong>自分のスタイルでノンアダルトでもアダルトでもお好きな方で稼げます。</strong>天神駅・薬院駅近くの綺麗で広々としたオフィスでパソコンを使ってのお仕事なので、男性と直接会うことや触れられることは一切なし。こんな不安な時代でも安心して働けます。自分に合ったスタイルで楽しく稼いでください！</p>
+                        <p class="chatdesc">アダルトチャット等の強制は一切ありません。<strong>自分のスタイルでノンアダルトでもアダルトでもお好きな方で稼げます。</strong>桜島桟橋駅・水族館口駅近くの綺麗で広々としたオフィスでパソコンを使ってのお仕事なので、男性と直接会うことや触れられることは一切なし。こんな不安な時代でも安心して働けます。自分に合ったスタイルで楽しく稼いでください！</p>
                     </div>
                     <div class="">
                         <span class="d-none d-lg-block">#04</span>
@@ -411,7 +406,7 @@
         <h2 class="main_cap en_title"><small>OFFICE</small><br />オフィス・お仕事環境</h2>
         <div class="container">
             <div class="row">
-                <p class="bold center col-12 col-md-10 offset-md-1">celine.は福岡でいちばん働きやすい環境を用意しています。そのほかにも、celine.で働くメリットがいっぱい！</p>
+                <p class="bold center col-12 col-md-10 offset-md-1">celine.は鹿児島でいちばん働きやすい環境を用意しています。そのほかにも、celine.で働くメリットがいっぱい！</p>
             </div>
 
 
@@ -530,11 +525,12 @@
                     <div class="container">
                         <div class="row">
                             <h3 class="col-4 icon-wrap">
-                                <img src="./res/icon-foot.svg" alt="天神エリア徒歩圏内" />
-                                <span class="bold">天神エリア</span>
+                                <img src="./res/icon-foot.svg" alt="桜島桟橋駅、水族館口駅徒歩圏内" />
+                                <span class="bold">桜島桟橋通駅<br/>水族館口駅</span>
                                 <span class="bold">徒歩圏内</span>
                             </h3>
-                            <p class="col-8">ショッピング、通勤に便利な天神エリアにオフィスがあります。仕事帰りにショッピングやヨガに行けたり、お友達と待ち合わせてご飯やカフェに行けたりできます。</p>
+                            <!-- <p class="col-8">ショッピング、通勤に便利な天神エリアにオフィスがあります。仕事帰りにショッピングやヨガに行けたり、お友達と待ち合わせてご飯やカフェに行けたりできます。</p> -->
+                            <p class="col-8">桜島桟橋通駅から徒歩４分、水族館口駅から徒歩５分のところにオフィスがあります。仕事帰りにショッピングやヨガに行けたり、お友達と待ち合わせてご飯やカフェに行けたりできます。</p>
                         </div>
                     </div>    
                 </div>
@@ -583,16 +579,6 @@
                     
                 </div>
             </div>
-            
-            <!-- <div class="row">
-                <p class="col-12 col-md-10 offset-md-1">
-                    初めてチャットレディとして働く方を応援するため、セリーヌでは入店お祝い金として<strong>最大5万円を入店が決まった方全員にプレゼント！</strong><br />初月にどれだけ稼げるか心配な方に、少しでも安心してスタートして欲しい。セリーヌは福岡でいちばん働きやすいチャットプロダクションを目指しています！
-                </p>
-                <div class="col-12 col-md-10 offset-md-1">
-                    <h3 class="cheerup"><strong><span>さらに初心者応援！</span></strong></h3>
-                    <p>最低時給1,200円を保証!!お仕事が全然分からないから不安という方も、時給保証があるので稼ぎながら安心してお仕事を覚えて下さい♪</p>
-                </div>
-            </div> -->
         </div>
     </section>
 
@@ -708,12 +694,9 @@
 
     <footer class="bk-pink_v">
         <h2>
-            福岡チャットレディで働くなら<br />
+            鹿児島チャットレディで働くなら<br />
                 <span class="logo">celine.</span>
         </h2>
-        <div>
-            <small>写真提供：shutterstock, 福岡市</small>
-        </div>
 	    <p id="copyright">&copy;2021 celine.</p><!-- copyright -->
     </footer>
 
