--- a/contact/index.html
+++ b/contact/index.html
@@ -11,21 +11,21 @@
         </script>
 
         <!-- meta -->
-        <title>応募・お問い合わせ | 福岡のチャットレディなら、celine.(セリーヌ)</title>
+        <title>応募・お問い合わせ | 鹿児島のチャットレディなら、celine.(セリーヌ)</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="format-detection" content="telephone=no">
         <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
         <meta charset="utf-8">
 
         <!-- Open Graph Tags -->
-        <meta property="og:title" content="応募・お問い合わせ | 福岡のチャットレディなら、celine.(セリーヌ)">
+        <meta property="og:title" content="応募・お問い合わせ | 鹿児島のチャットレディなら、celine.(セリーヌ)">
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://chat-fukuoka.com/">
         <meta property="og:image" content="https://chat-fukuoka.com/res/og-img.jpg">
-        <meta property="og:site_name" content="celine. (セリーヌ) | 福岡で今一番人気のプロダクション">
-        <meta property="og:description" content="福岡でチャットレディを始めるなら安心で手厚い保障のceline.（セリーヌ）にお任せ！！最低時給1200円を保障！今だけ入店祝い金10万円を支給！はceline.だけ。専属のスタイリストがヘアメイクをサポート！化粧品や衣装も充実しているので、あなたもライブチャットの全国ランキング上位にランクインできる!?天神から徒歩圏内で通勤に便利な環境です！チャットレディ未経験でも手厚くサポート！初月から効率的に稼げます。">
+        <meta property="og:site_name" content="celine. (セリーヌ) | 鹿児島で今一番人気のプロダクション">
+        <meta property="og:description" content="鹿児島でチャットレディを始めるなら安心で手厚い保障のceline.（セリーヌ）にお任せ！！最低時給1200円を保障！今だけ入店祝い金10万円を支給！はceline.だけ。専属のスタイリストがヘアメイクをサポート！化粧品や衣装も充実しているので、あなたもライブチャットの全国ランキング上位にランクインできる!?桜島桟橋駅・水族館口駅から徒歩圏内で通勤に便利な環境です！チャットレディ未経験でも手厚くサポート！初月から効率的に稼げます。">
         <meta property="og:locale" content="ja_JP">
-        <meta name="twitter:text:title" content="応募・お問い合わせ | 福岡のチャットレディなら、celine.(セリーヌ)">
+        <meta name="twitter:text:title" content="応募・お問い合わせ | 鹿児島のチャットレディなら、celine.(セリーヌ)">
         <meta name="twitter:card" content="summary">
 
         <!-- favicon setting -->
@@ -233,40 +233,7 @@
     <section id="campain" class="bk-pink">
         <h2 class="main_cap en_title"><small>CAMPAIN</small><br />キャンペーン</h2>
         <div class="container">
-            <!--<div class="row">
-                 <div class="col-12 col-md-8 offset-md-2 d-flex">
-                    <img class="" src="../res/campain1.svg" alt="今だけ！限定！応援キャンペーン" />
-                    <div class="inner">
-                        <h3><span class="tag">入店お祝い金</span>
-                            <div class="d-flex justify-content-center">
-                                <span class="accent">最大</span>
-                                <p><span class="bdd">5万円</span><span class='semaku'>もらえる！</span></p>
-                            </div>
-                        </h3>
-                    </div>
-                </div>
-            </div> -->
-            <!-- <div class="row">
-                <p class="col-12 col-md-10 offset-md-1">
-                    初めてチャットレディとして働く方を応援するため、セリーヌでは入店お祝い金として<strong>最大5万円を入店が決まった方全員にプレゼント！</strong><br />初月にどれだけ稼げるか心配な方に、少しでも安心してスタートして欲しい。セリーヌは福岡でいちばん働きやすいチャットプロダクションを目指しています！
-                </p>
-                <div class="col-12 col-md-10 offset-md-1">
-                    <h3 class="cheerup"><strong><span>さらに初心者応援！</span></strong></h3>
-                    <p>最低時給1,200円を保証!!お仕事が全然分からないから不安という方も、時給保証があるので稼ぎながら安心してお仕事を覚えて下さい♪</p>
-                </div>
-            </div> -->
             <div class="row">
-                <!-- <div class="col-12 col-md-8 offset-md-2 d-flex">
-                    <img class="" src="./res/campain1.svg" alt="今だけ！限定！応援キャンペーン" />
-                    <div class="inner">
-                        <h3><span class="tag">入店お祝い金</span>
-                            <div class="d-flex justify-content-center">
-                                <span class="accent">最大</span>
-                                <p><span class="bdd">5万円</span><span class='semaku'>もらえる！</span></p>
-                            </div>
-                        </h3>
-                    </div>
-                </div> -->
                 <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
                     <h3 style="width: 100%;">
                         <img style="width: 100%;" src="../res/202110-banner2.gif" alt="最大10万円支給！">
@@ -397,12 +364,9 @@
 
     <footer class="bk-pink_v">
         <h2>
-            福岡チャットレディで働くなら<br />
+            鹿児島チャットレディで働くなら<br />
                 <span class="logo">celine.</span>
         </h2>
-        <div>
-            <small>写真提供：shutterstock, 福岡市</small>
-        </div>
 	    <p id="copyright">&copy;2021 celine.</p><!-- copyright -->
     </footer>
 
