--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <li>&nbsp;化粧道具&nbsp;/</li>
                 <li>&nbsp;衣装&nbsp;/</li>
                 <li>&nbsp;専属スタイリスト&nbsp;/</li>
-                <li>&nbsp;桜島桟橋通駅<br />水族館口駅<br />徒歩圏内</li>
+                <li>&nbsp;桜島桟橋通駅・水族館口駅徒歩圏内</li>
             </ul>
         </div>
         <div class="wrap7">
